--- a/xpi/content/css/tabs_squared-osx.css
+++ b/xpi/content/css/tabs_squared-osx.css
@@ -1,48 +1,49 @@
 @namespace url(http://www.mozilla.org/keymaster/gatekeeper/there.is.only.xul);
 
 @-moz-document url(chrome://browser/content/browser.xul){
-	
+
 	.tabbrowser-arrowscrollbox > .arrowscrollbox-scrollbox {
 	  -moz-padding-end: 22px !important;
 	  -moz-padding-start: 0px !important;
 	}
 	
 	.tabbrowser-tab[selected="true"]:not(:-moz-lwtheme){
-	  background-image: linear-gradient(to bottom,#d3d3d3,#d3d3d3,#cdcdcd);
+	  background-image: linear-gradient(to top,#eaeaea,#e2e2e2,#ededed,#fcfcfc);
 	}
 	
 	.tabbrowser-tab:not([selected="true"]):not(:hover):not(:-moz-lwtheme) {
-	  background-image: linear-gradient(to bottom, #676f76 0px, transparent 1px),linear-gradient(to bottom, #949494,#9f9f9f,#a9a9a9);
+	  background-image: linear-gradient(to top, #676f76 0px, transparent 1px),linear-gradient(to top, #a1a1a1,#c0c0c0,#cccccc,#d4d4d4);
 	  color:black !important;
 	}
 	
 	.tabbrowser-tab:not([selected="true"]):hover:not(:-moz-lwtheme) {
-	  background-image: linear-gradient(to bottom, #676f76 0px, transparent 1px),linear-gradient(to bottom,#adadad,#b8b8b8);
+	  background-image: linear-gradient(to top, #676f76 0px, transparent 1px),linear-gradient(to top,#b3b3b3,#cfcfcf,#dedede,#e5e5e5);
 	  color:black !important;
 	}
-
+	
 	.tabs-newtab-button:not(:-moz-lwtheme) {
-	  background-image: linear-gradient(to bottom, #676f76 0px, transparent 1px),linear-gradient(to bottom, #949494,#9f9f9f,#a9a9a9) !important;
+	  background-image: linear-gradient(to top, #676f76 0px, transparent 1px),linear-gradient(to top, #a1a1a1,#c0c0c0,#cccccc,#d4d4d4) !important;
 	}
 	
 	.tabs-newtab-button:hover:not(:-moz-lwtheme) {
-	  background-image: linear-gradient(to bottom, #676f76 0px, transparent 1px),linear-gradient(to bottom,#adadad,#b8b8b8) !important;
+	  background-image: linear-gradient(to top, #676f76 0px, transparent 1px),linear-gradient(to top,#b3b3b3,#cfcfcf,#dedede,#e5e5e5) !important;
 	}
 
 	.tabbrowser-tab[pinned][titlechanged]:not([selected="true"]):not(:hover):not(:-moz-lwtheme){
 	  background-size: 95% 100% !important;
-	  background-image: linear-gradient(to bottom, #676f76 0px, transparent 1px),linear-gradient(to bottom, #a1a1a1,#c0c0c0,#cccccc,#d4d4d4) !important;
+	  background-image: linear-gradient(to top, #676f76 0px, transparent 1px),linear-gradient(to top, #a1a1a1,#c0c0c0,#cccccc,#d4d4d4) !important;
 	}
 
 	.tabbrowser-tabs{
 	  border-bottom:0 !important;
+	  margin-right: -8px !important;
 	}
 	
 	.tabbrowser-tab,
 	.tabs-newtab-button{
 	  height:28px !important;
 	}
-	
+
 	.tabs-newtab-button > .toolbarbutton-icon{
 	  margin-left:-10px !important;
 	  margin-right:-10px !important;
@@ -80,13 +81,14 @@
 	}
 	
 	.tabs-newtab-button .toolbarbutton-icon {
-	  margin-bottom: -3px !important;
+	  /*margin-bottom: -3px !important;*/
 	}
 	
+	.tabs-newtab-button .tab-stack,
 	.tabbrowser-tab .tab-stack {
 	  -moz-appearance: none !important;
 	  margin-top: -1px !important;
-	  margin-bottom: -2px !important;
+	  margin-bottom: -4px !important;
 	}
 	
 	.tabbrowser-tab .tab-content{
@@ -96,32 +98,33 @@
 	  padding-right: 5px !important;
 	  margin-left: 0px !important;
 	  margin-right: 0px !important;
+
 	}
 
 	#TabsToolbar {
 	  min-height: 0px !important;
+	  padding-left: 2px !important;
+	  padding-right: 2px !important;
 	}
 
 	.tabs-newtab-button{
-	  background: linear-gradient(to bottom, rgba(10%,10%,10%,.4) 1px, transparent 1px), linear-gradient(transparent, hsla(0,0%,45%,.1) 1px, hsla(0,0%,32%,.2) 80%, hsla(0,0%,0%,.2)),
+	  background: linear-gradient(to top, rgba(10%,10%,10%,.4) 1px, transparent 1px), linear-gradient(transparent, hsla(0,0%,45%,.1) 1px, hsla(0,0%,32%,.2) 80%, hsla(0,0%,0%,.2)),
 				  linear-gradient(-moz-dialog, -moz-dialog) !important;
 	}
-	
+
 	.tabbrowser-tab,
 	.tabs-newtab-button{
 	  -moz-appearance: none !important;
-	  background: linear-gradient(to bottom, rgba(10%,10%,10%,.4) 1px, transparent 1px), linear-gradient(transparent, hsla(0,0%,45%,.1) 1px, hsla(0,0%,32%,.2) 80%, hsla(0,0%,0%,.2)),
+	  background: linear-gradient(to top, rgba(10%,10%,10%,.4) 1px, transparent 1px), linear-gradient(transparent, hsla(0,0%,45%,.1) 1px, hsla(0,0%,32%,.2) 80%, hsla(0,0%,0%,.2)),
 				  linear-gradient(-moz-dialog, -moz-dialog);
 	  background-origin: border-box !important;
 	  background-position: 1px 2px !important;
 	  background-size: calc(100% - 2px) calc(100% - 3px) !important;
 	  background-repeat: no-repeat !important;
-	  border-width: 0px 3px 2px !important;
+	  border-width: 0px 3px 1px !important;
 	  border-style: solid !important;
-	  border-image: url(chrome://classic_theme_restorer/content/images/tab-r.png) 0 3 0 fill repeat stretch !important;
+	  border-image: url(chrome://classic_theme_restorer/content/images/tab.png) 0 3 0 fill repeat stretch !important;
 	  border-radius: 0 !important;
-	  border-bottom-left-radius: 9px !important;
-	  border-bottom-right-radius: 9px !important;
 	}
 
 	.tabbrowser-tab[selected="true"] {
@@ -139,6 +142,12 @@
 	.tabbrowser-tab[selected="true"]:-moz-lwtheme {
 	  background-image: linear-gradient(rgba(255,255,255,.7), rgba(255,255,255,.5) 50%) !important;
 	  background-size: calc(100% - 1px) calc(100% - 3px) !important;
+	}
+
+	@media all and (-moz-windows-glass) {
+		.tabbrowser-tab[selected="true"]:-moz-lwtheme {
+		  background-size: calc(100% - 1px) calc(100% - 4px) !important;
+		}
 	}
 
 	.tabbrowser-tab:-moz-lwtheme-brighttext:not([selected="true"]),
@@ -168,7 +177,16 @@
 	  background-image: linear-gradient(hsla(0,0%,100%,.4), hsla(0,0%,75%,.4) 80%),
 						radial-gradient(circle farthest-corner at 50% 3px, rgba(255,255,255,1) 3%, rgba(186,221,251,.75) 40%, rgba(127,179,255,.5) 80%, rgba(127,179,255,.25)) !important;
 	}
-	
+
+	.tab-background-middle[selected=true]:-moz-lwtheme{
+	  background: linear-gradient(to top, rgba(10%,10%,10%,.2) 0px, transparent 0px), linear-gradient(transparent, hsla(0,0%,45%,.0) 1px, hsla(0,0%,32%,.0) 80%, hsla(0,0%,0%,.0)) !important;
+	}
+
+	#navigator-toolbox toolbar:-moz-lwtheme{
+	  box-shadow:none !important;
+	  border: 0px solid transparent !important;
+	}
+
 	.tabbrowser-tab[pinned]{
 	  min-width: 32px !important;
 	  width: 32px !important;
@@ -184,25 +202,9 @@
 	#tabbrowser-tabs:not([overflow]) > .tabbrowser-tab[last-visible-tab]:not([selected]):not([beforehovered]):not(:hover)::after {
 		background-image: none !important;
 	}
-	
-	.tabbrowser-tabs{
-	  margin-top: -2px !important;
-	  margin-right: -8px !important;
-	}
 
-	#TabsToolbar:not(:-moz-lwtheme){
-		background: linear-gradient(to bottom,#5e5e5e 1px,#898989,#939393,#989898,#a1a1a1 1px) !important;
-		border-bottom: 1px solid #6f6f6f !important;
-	}
-	
-	#TabsToolbar #ctr_appbutton{
-	  border-radius: 0 !important;
-	  border-bottom-left-radius: 3px !important;
-	  border-bottom-right-radius: 3px !important;
-	  margin-top: 0 !important;
-	  border-top: 0 !important;
-	}
 }
+
 @-moz-document url(chrome://classic_theme_restorer/content/options.xul) {
 	#ctr_sqtabcolorstab{
 		visibility: visible !important;
