--- a/xpi/ctr_os_special/linux/classictabsextra.css
+++ b/xpi/ctr_os_special/linux/classictabsextra.css
@@ -12,16 +12,22 @@
 
 	.tabbrowser-tab[selected="true"]:not(:-moz-lwtheme){
 	  background-image: linear-gradient(rgba(255,255,255,.8) 1px, rgba(255,255,255,.5) 3px, rgba(255,255,255,.3) 32%),
-						linear-gradient(-moz-dialog, -moz-dialog) !important;
+						linear-gradient(-moz-dialog, -moz-dialog);
 	}
 	
-	.tabs-newtab-button:not(:-moz-lwtheme),
 	.tabbrowser-tab:not([selected="true"]):not(:hover):not(:-moz-lwtheme) {
+	  background-image: linear-gradient(hsla(0,0%,100%,.2), hsla(0,0%,45%,.2) 2px, hsla(0,0%,32%,.2) 80%);
+	}
+	
+	.tabbrowser-tab:not([selected="true"]):hover:not(:-moz-lwtheme) {
+	  background-image: linear-gradient(hsla(0,0%,100%,.6), hsla(0,0%,100%,.2) 4px, hsla(0,0%,75%,.2) 80%);
+	}
+	
+	.tabs-newtab-button:not(:-moz-lwtheme) {
 	  background-image: linear-gradient(hsla(0,0%,100%,.2), hsla(0,0%,45%,.2) 2px, hsla(0,0%,32%,.2) 80%) !important;
 	}
 	
-	.tabs-newtab-button:hover:not(:-moz-lwtheme),
-	.tabbrowser-tab:not([selected="true"]):hover:not(:-moz-lwtheme) {
+	.tabs-newtab-button:hover:not(:-moz-lwtheme) {
 	  background-image: linear-gradient(hsla(0,0%,100%,.6), hsla(0,0%,100%,.2) 4px, hsla(0,0%,75%,.2) 80%) !important;
 	}
 	
