--- a/xpi/ctr_os_special/winaero/classictabsextra.css
+++ b/xpi/ctr_os_special/winaero/classictabsextra.css
@@ -36,16 +36,19 @@
 	/* for Windows Aero Theme (AeroBasic/AeroGlass - Vista/7/8) */
 	@media all and (-moz-windows-theme:aero) {
 		.tabbrowser-tab[selected="true"]:not(:-moz-lwtheme) {
-		  background-image: linear-gradient(to top,#eaf2fb,#eef5fc,#feffff) !important;
+		  background-image: linear-gradient(to top,#eaf2fb,#eef5fc,#feffff);
 		}
-
-		.tabs-newtab-button:not(:-moz-lwtheme),
 		.tabbrowser-tab:not([selected="true"]):not(:hover):not(:-moz-lwtheme) {
+		  background-image: linear-gradient(to top, #868d94 0px, transparent 1px),linear-gradient(to top,#b4c0cc,#c8d4e1,#d1deec);
+		}
+		.tabbrowser-tab:not([selected="true"]):hover:not(:-moz-lwtheme) {
+		  background-image: linear-gradient(to top, #868d94 0px, transparent 1px),linear-gradient(to top,#d0dce8,#dce7f3,#e5effa);
+		}
+		
+		.tabs-newtab-button:not(:-moz-lwtheme) {
 		  background-image: linear-gradient(to top, #868d94 0px, transparent 1px),linear-gradient(to top,#b4c0cc,#c8d4e1,#d1deec) !important;
 		}
-
-		.tabs-newtab-button:hover:not(:-moz-lwtheme),
-		.tabbrowser-tab:not([selected="true"]):hover:not(:-moz-lwtheme) {
+		.tabs-newtab-button:hover:not(:-moz-lwtheme) {
 		  background-image: linear-gradient(to top, #868d94 0px, transparent 1px),linear-gradient(to top,#d0dce8,#dce7f3,#e5effa) !important;
 		}
 		
@@ -60,21 +63,29 @@
    	
 		.tabbrowser-tab[selected="true"]:not(:-moz-lwtheme) {
 		  background-image: linear-gradient(rgba(255,255,255,.7), rgba(255,255,255,.4) 50%),
-							linear-gradient(-moz-dialog, -moz-dialog) !important;
+							linear-gradient(-moz-dialog, -moz-dialog);
 		}
 
-		.tabs-newtab-button:not(:-moz-lwtheme),
 		.tabbrowser-tab:not([selected="true"]):not(:hover):not(:-moz-lwtheme) {
 		  background-image: linear-gradient(to top, rgba(10%,10%,10%,.4) 1px, transparent 1px), linear-gradient(transparent, hsla(0,0%,45%,.1) 1px, hsla(0,0%,32%,.2) 80%, hsla(0,0%,0%,.2)),
-							linear-gradient(-moz-dialog, -moz-dialog) !important;
+							linear-gradient(-moz-dialog, -moz-dialog);
 		  color:black !important;
 		}
 
-		.tabs-newtab-button:hover:not(:-moz-lwtheme),
 		.tabbrowser-tab:not([selected="true"]):hover:not(:-moz-lwtheme) {
 		  background-image: linear-gradient(to top, rgba(10%,10%,10%,.4) 1px, transparent 1px), linear-gradient(hsla(0,0%,100%,.3) 1px, hsla(0,0%,75%,.2) 80%, hsla(0,0%,60%,.2)),
-							linear-gradient(-moz-dialog, -moz-dialog) !important;
+							linear-gradient(-moz-dialog, -moz-dialog);
 		  color:black !important;
+		}
+		
+		.tabs-newtab-button:not(:-moz-lwtheme) {
+		  background-image: linear-gradient(to top, rgba(10%,10%,10%,.4) 1px, transparent 1px), linear-gradient(transparent, hsla(0,0%,45%,.1) 1px, hsla(0,0%,32%,.2) 80%, hsla(0,0%,0%,.2)),
+							linear-gradient(-moz-dialog, -moz-dialog) !important;
+		}
+
+		.tabs-newtab-button:hover:not(:-moz-lwtheme) {
+		  background-image: linear-gradient(to top, rgba(10%,10%,10%,.4) 1px, transparent 1px), linear-gradient(hsla(0,0%,100%,.3) 1px, hsla(0,0%,75%,.2) 80%, hsla(0,0%,60%,.2)),
+							linear-gradient(-moz-dialog, -moz-dialog) !important;
 		}
 		
 		.tabbrowser-tab[pinned][titlechanged]:not([selected="true"]):not(:hover):not(:-moz-lwtheme){
