--- a/xpi/ctr_os_special/winxp/classictabsextra.css
+++ b/xpi/ctr_os_special/winxp/classictabsextra.css
@@ -36,21 +36,29 @@
 	/* tab colors */
 	.tabbrowser-tab[selected="true"]:not(:-moz-lwtheme){
 	  background-image: linear-gradient(rgba(255,255,255,.7), rgba(255,255,255,.4) 50%),
-						linear-gradient(-moz-dialog, -moz-dialog) !important;
+						linear-gradient(-moz-dialog, -moz-dialog);
 	}
 	
-	.tabs-newtab-button:not(:-moz-lwtheme),
 	.tabbrowser-tab:not([selected="true"]):not(:hover):not(:-moz-lwtheme) {
 	  background-image: linear-gradient(to top, rgba(10%,10%,10%,.4) 1px, transparent 1px), linear-gradient(transparent, hsla(0,0%,45%,.1) 1px, hsla(0,0%,32%,.2) 80%, hsla(0,0%,0%,.2)),
-						linear-gradient(-moz-dialog, -moz-dialog) !important;
+						linear-gradient(-moz-dialog, -moz-dialog);
 	  color:black !important;
 	}
 	
-	.tabs-newtab-button:hover:not(:-moz-lwtheme),
 	.tabbrowser-tab:not([selected="true"]):hover:not(:-moz-lwtheme) {
 	  background-image: linear-gradient(to top, rgba(10%,10%,10%,.4) 1px, transparent 1px), linear-gradient(hsla(0,0%,100%,.3) 1px, hsla(0,0%,75%,.2) 80%, hsla(0,0%,60%,.2)),
-						linear-gradient(-moz-dialog, -moz-dialog) !important;
+						linear-gradient(-moz-dialog, -moz-dialog);
 	  color:black !important;
+	}
+	
+	.tabs-newtab-button:not(:-moz-lwtheme) {
+	  background-image: linear-gradient(to top, rgba(10%,10%,10%,.4) 1px, transparent 1px), linear-gradient(transparent, hsla(0,0%,45%,.1) 1px, hsla(0,0%,32%,.2) 80%, hsla(0,0%,0%,.2)),
+						linear-gradient(-moz-dialog, -moz-dialog) !important;
+	}
+	
+	.tabs-newtab-button:hover:not(:-moz-lwtheme) {
+	  background-image: linear-gradient(to top, rgba(10%,10%,10%,.4) 1px, transparent 1px), linear-gradient(hsla(0,0%,100%,.3) 1px, hsla(0,0%,75%,.2) 80%, hsla(0,0%,60%,.2)),
+						linear-gradient(-moz-dialog, -moz-dialog) !important;
 	}
 
 	.tabbrowser-tab[pinned][titlechanged]:not([selected="true"]):not(:-moz-lwtheme){
