--- a/xpi/content/css/tabmokcolor.css
+++ b/xpi/content/css/tabmokcolor.css
@@ -42,4 +42,36 @@
 	  0px 0px 3px black,
 	  0px 0px 3px black !important;
   }
+  
+	/* Tab close button */
+	.tab-close-button {
+	  -moz-appearance: none !important;
+	  -moz-image-region: rect(0, 64px, 16px, 48px) !important;
+	  border: none !important;
+	  padding: 0px !important;
+	  list-style-image: url("chrome://classic_theme_restorer/content/images/close2.png") !important;
+	}
+	
+	.tab-close-button[selected="true"] {
+	  -moz-appearance: none !important;
+	  -moz-image-region: rect(0, 64px, 16px, 48px) !important;
+	  border: none !important;
+	  padding: 0px !important;
+	  list-style-image: url("chrome://classic_theme_restorer/content/images/close.png") !important;
+	}
+
+	.tab-close-button:hover,
+	.tab-close-button:hover[selected="true"] {
+	  -moz-image-region: rect(0, 32px, 16px, 16px) !important;
+	}
+
+	.tab-close-button:hover:active,
+	.tab-close-button:hover:active[selected="true"] {
+	  -moz-image-region: rect(0, 48px, 16px, 32px) !important;
+	}
+
+	.tab-close-button[selected="true"] {
+	  -moz-image-region: rect(0, 16px, 16px, 0) !important;
+	} 
+  
 }
