--- a/xpi/content/css/tabs_squared-osx2.css
+++ b/xpi/content/css/tabs_squared-osx2.css
@@ -12,21 +12,21 @@
 	}
 	
 	.tabbrowser-tab:not([selected="true"]):not(:hover):not(:-moz-lwtheme) {
-	  background-image: linear-gradient(to top, #676f76 0px, transparent 1px),linear-gradient(to top, #a1a1a1,#c0c0c0,#cccccc,#d4d4d4);
-	  color:black !important;
+	  background-image: linear-gradient(transparent,transparent) !important;
+
 	}
 	
 	.tabbrowser-tab:not([selected="true"]):hover:not(:-moz-lwtheme) {
-	  background-image: linear-gradient(to top, #676f76 0px, transparent 1px),linear-gradient(to top,#b3b3b3,#cfcfcf,#dedede,#e5e5e5);
-	  color:black !important;
+	  background-image: linear-gradient(transparent,transparent) !important;
+
 	}
 	
 	.tabs-newtab-button:not(:-moz-lwtheme) {
-	  background-image: linear-gradient(to top, #676f76 0px, transparent 1px),linear-gradient(to top, #a1a1a1,#c0c0c0,#cccccc,#d4d4d4) !important;
+	  background-image: linear-gradient(transparent,transparent) !important;
 	}
 	
 	.tabs-newtab-button:hover:not(:-moz-lwtheme) {
-	  background-image: linear-gradient(to top, #676f76 0px, transparent 1px),linear-gradient(to top,#b3b3b3,#cfcfcf,#dedede,#e5e5e5) !important;
+	  background-image: linear-gradient(transparent,transparent) !important;
 	}
 
 	.tabbrowser-tab[pinned][titlechanged]:not([selected="true"]):not(:hover):not(:-moz-lwtheme){
@@ -84,6 +84,7 @@
 	.tabbrowser-tab .tab-stack {
 	  -moz-appearance: none !important;
 	  margin-top: 0px !important;
+
 	  margin-bottom: -2px !important;
 	}
 	
@@ -104,50 +105,74 @@
 	  padding-right: 2px !important;
 	}
 
-	.tabs-newtab-button{
-	  background: linear-gradient(to top, rgba(10%,10%,10%,.4) 1px, transparent 1px), linear-gradient(transparent, hsla(0,0%,45%,.1) 1px, hsla(0,0%,32%,.2) 80%, hsla(0,0%,0%,.2)),
-				  linear-gradient(-moz-dialog, -moz-dialog) !important;
-	}
-
-	.tabbrowser-tab,
-	.tabs-newtab-button{
+	.tabbrowser-tab[selected="true"]{
 	  -moz-appearance: none !important;
 	  background: linear-gradient(to top, rgba(10%,10%,10%,.4) 1px, transparent 1px), linear-gradient(transparent, hsla(0,0%,45%,.1) 1px, hsla(0,0%,32%,.2) 80%, hsla(0,0%,0%,.2)),
 				  linear-gradient(-moz-dialog, -moz-dialog);
 	  background-origin: border-box !important;
-	  background-position: 1px 3px !important;
-	  background-size: calc(100% - 2px) calc(100% - 2px) !important;
+	  background-position: 1px 2px !important;
+	  background-size: calc(100% - 2px) calc(100% - 3px) !important;
 	  background-repeat: no-repeat !important;
-	  border-top-right-radius: 3px !important;
-	  border-top-left-radius: 3px !important;
+	  border-bottom-right-radius: 3px !important;
+	  border-bottom-left-radius: 3px !important;
 	}
 	
-	.tabs-newtab-button:not(:-moz-lwtheme){
-	  border-width: 1px 3px 1px !important;
-	  border-image: url(chrome://classic_theme_restorer/content/images/tab.png) 0 3 1 fill repeat stretch !important;
-	  border-style: solid !important;
+	.tabbrowser-tab:not([selected="true"]):hover,
+	.tabs-newtab-button:hover{
+	  -moz-appearance: none !important;
+	  background-origin: border-box !important;
+	  background-position: 1px 2px !important;
+	  background-size: calc(100% - 2px) calc(100% - 3px) !important;
+	  background-repeat: no-repeat !important;
+	  border-bottom-right-radius: 3px !important;
+	  border-bottom-left-radius: 3px !important;
 	}
 	
-	.tabs-newtab-button:-moz-lwtheme{
-	  border-width: 1px 3px 1px !important;
-	  border-image: url(chrome://classic_theme_restorer/content/images/taba.png) 0 3 1 fill repeat stretch !important;
-	  border-style: solid !important;
+	.tabbrowser-tab:not([selected="true"]):not(:hover),
+	.tabs-newtab-button{
+	  -moz-appearance: none !important;
+	  background-origin: border-box !important;
+	  background-position: 1px 2px !important;
+	  background-size: calc(100% - 2px) calc(100% - 3px) !important;
+	  background-repeat: no-repeat !important;
+	  border-bottom-right-radius: 3px !important;
+	  border-bottom-left-radius: 3px !important;
 	}
-
-	.tabbrowser-tab[selected=true] > .tab-stack > .tab-content {
-      border-image: url("chrome://classic_theme_restorer/content/images/taba.png") 1 3 0 fill repeat stretch !important;
-      border-style: solid !important;
-    }
-	
-	.tabbrowser-tab:not([selected=true]):not(:-moz-lwtheme) > .tab-stack > .tab-content {
+	.tabbrowser-tab[selected="true"] > .tab-stack > .tab-content {
       border-image: url("chrome://classic_theme_restorer/content/images/tab.png") 1 3 0 fill repeat stretch !important;
       border-style: solid !important;
+
     }
-	
-	.tabbrowser-tab:not([selected=true]):-moz-lwtheme > .tab-stack > .tab-content {
+	.tabbrowser-tab:not([selected="true"]):hover > .tab-stack > .tab-content {
+      border-image: url("chrome://classic_theme_restorer/content/images/tab.png") 1 3 0 fill repeat stretch !important;
+      border-style: solid !important;
+
+    }
+	.tabbrowser-tab:not([selected="true"]):not(:hover) > .tab-stack > .tab-content {
+      border-image: url("chrome://classic_theme_restorer/content/images/tab_empty.png") 1 3 0 fill repeat stretch !important;
+      border-style: solid !important;
+
+    }
+	.tabs-newtab-button{
+	  border-width: 1px 3px 1px !important;
+	  border-style: solid !important;
+	  border-image: url(chrome://classic_theme_restorer/content/images/tab_empty.png) 0 3 1 fill repeat stretch !important;
+	}
+	.tabs-newtab-button:hover{
+	  border-width: 1px 3px 1px !important;
+	  border-style: solid !important;
+	  border-image: url(chrome://classic_theme_restorer/content/images/tab.png) 0 3 1 fill repeat stretch !important;
+	}
+
+	.tabbrowser-tab:not([selected="true"]):hover:-moz-lwtheme > .tab-stack > .tab-content  {
       border-image: url("chrome://classic_theme_restorer/content/images/taba.png") 1 3 0 fill repeat stretch !important;
       border-style: solid !important;
     }
+	.tabs-newtab-button:-moz-lwtheme:hover{
+	  border-width: 1px 3px 1px !important;
+	  border-style: solid !important;
+	  border-image: url(chrome://classic_theme_restorer/content/images/taba.png) 0 3 1 fill repeat stretch !important;
+	}
 
 	.tabbrowser-tab[selected="true"] {
 	  background-size: calc(100% - 2px) calc(100% - 2px) !important;
@@ -168,28 +193,13 @@
 
 	@media all and (-moz-windows-glass) {
 		.tabbrowser-tab[selected="true"]:-moz-lwtheme {
-		  background-size: calc(100% - 1px) calc(100% - 5px) !important;
+		  background-size: calc(100% - 1px) calc(100% - 4px) !important;
 		}
 	}
 
-	.tabbrowser-tab:-moz-lwtheme-brighttext:not([selected="true"]),
-	.tabs-newtab-button:-moz-lwtheme-brighttext {
-	  background-image: linear-gradient(hsla(0,0%,40%,.6), hsla(0,0%,30%,.6) 80%) !important;
-	}
-
-	.tabbrowser-tab:-moz-lwtheme-brighttext:not([selected="true"]):hover,
-	.tabs-newtab-button:-moz-lwtheme-brighttext:hover {
-	  background-image: linear-gradient(hsla(0,0%,60%,.6), hsla(0,0%,45%,.6) 80%) !important;
-	}
-
-	.tabbrowser-tab:-moz-lwtheme-darktext:not([selected="true"]),
-	.tabs-newtab-button:-moz-lwtheme-darktext {
-	  background-image: linear-gradient(hsla(0,0%,60%,.5), hsla(0,0%,45%,.5) 80%) !important;
-	}
-
-	.tabbrowser-tab:-moz-lwtheme-darktext:not([selected="true"]):hover,
-	.tabs-newtab-button:-moz-lwtheme-darktext:hover {
-	  background-image: linear-gradient(hsla(0,0%,80%,.5), hsla(0,0%,60%,.5) 80%) !important;
+	.tabs-newtab-button:-moz-lwtheme,
+	.tabbrowser-tab:not([selected="true"]):-moz-lwtheme {
+		background:none !important;
 	}
 
 	.tabbrowser-tab[pinned][titlechanged]:not([selected="true"]) {
@@ -237,6 +247,6 @@
 
 @-moz-document url(chrome://classic_theme_restorer/content/options.xul) {
 	#ctr_sqtabcolorstab{
-		visibility: visible !important;
+		visibility: collapse !important;
 	}
 }
