--- a/xpi/content/css/tabs_squared-r-osx.css
+++ b/xpi/content/css/tabs_squared-r-osx.css
@@ -79,14 +79,10 @@
 	  width: 28px !important;
 	}
 	
-	.tabs-newtab-button .toolbarbutton-icon {
-	  margin-bottom: -3px !important;
-	}
-	
 	.tabbrowser-tab .tab-stack {
 	  -moz-appearance: none !important;
-	  margin-top: -1px !important;
-	  margin-bottom: -2px !important;
+	  margin-top: 0px !important;
+	  margin-bottom: -1px !important;
 	}
 	
 	.tabbrowser-tab .tab-content{
@@ -96,6 +92,8 @@
 	  padding-right: 5px !important;
 	  margin-left: 0px !important;
 	  margin-right: 0px !important;
+	  margin-top: -1px !important;
+	  margin-bottom: 0px !important;
 	}
 
 	#TabsToolbar {
@@ -114,16 +112,38 @@
 				  linear-gradient(-moz-dialog, -moz-dialog);
 	  background-origin: border-box !important;
 	  background-position: 1px 2px !important;
-	  background-size: calc(100% - 2px) calc(100% - 3px) !important;
+	  background-size: calc(100% - 2px) calc(100% - 2px) !important;
 	  background-repeat: no-repeat !important;
-	  border-width: 0px 3px 2px !important;
-	  border-style: solid !important;
-	  border-image: url(chrome://classic_theme_restorer/content/images/tab-r.png) 0 3 0 fill repeat stretch !important;
-	  border-radius: 0 !important;
 	  border-bottom-left-radius: 9px !important;
 	  border-bottom-right-radius: 9px !important;
 	}
 
+	.tabs-newtab-button:not(:-moz-lwtheme){
+	  border-width: 1px 3px 3px !important;
+	  border-image: url(chrome://classic_theme_restorer/content/images/tab-r.png) 0 3 1 fill repeat stretch !important;
+	  border-style: solid !important;
+	}
+	
+	.tabs-newtab-button:-moz-lwtheme{
+	  border-width: 1px 3px 3px !important;
+	  border-image: url(chrome://classic_theme_restorer/content/images/tab-r.png) 0 3 1 fill repeat stretch !important;
+	  border-style: solid !important;
+	}
+	.tabbrowser-tab[selected=true] > .tab-stack > .tab-content {
+      border-image: url("chrome://classic_theme_restorer/content/images/tab-r.png") 1 3 0 fill repeat stretch !important;
+      border-style: solid !important;
+    }
+	
+	.tabbrowser-tab:not([selected=true]):not(:-moz-lwtheme) > .tab-stack > .tab-content {
+      border-image: url("chrome://classic_theme_restorer/content/images/tab-r.png") 1 3 0 fill repeat stretch !important;
+      border-style: solid !important;
+    }
+
+	.tabbrowser-tab:not([selected=true]):-moz-lwtheme > .tab-stack > .tab-content {
+      border-image: url("chrome://classic_theme_restorer/content/images/tab-r.png") 1 3 0 fill repeat stretch !important;
+      border-style: solid !important;
+    }
+	
 	.tabbrowser-tab[selected="true"] {
 	  background-size: calc(100% - 2px) calc(100% - 2px) !important;
 	}
@@ -138,7 +158,7 @@
 
 	.tabbrowser-tab[selected="true"]:-moz-lwtheme {
 	  background-image: linear-gradient(rgba(255,255,255,.7), rgba(255,255,255,.5) 50%) !important;
-	  background-size: calc(100% - 1px) calc(100% - 3px) !important;
+	  background-size: calc(100% - 1px) calc(100% - 4px) !important;
 	}
 
 	.tabbrowser-tab:-moz-lwtheme-brighttext:not([selected="true"]),
@@ -201,6 +221,15 @@
 	  border-bottom-right-radius: 3px !important;
 	  margin-top: 0 !important;
 	  border-top: 0 !important;
+	}
+
+	.tabbrowser-tab:not([pinned]) .tab-close-button{
+	  margin-right:-4px !important;
+	}
+
+	.tabbrowser-tab:not([pinned]) .tab-icon-image{
+	  margin-left:-3px !important;
+	  margin-right:3px !important;
 	}
 }
 @-moz-document url(chrome://classic_theme_restorer/content/options.xul) {
