--- a/xpi/content/css/tabs_squared-r-osx2.css
+++ b/xpi/content/css/tabs_squared-r-osx2.css
@@ -1,49 +1,46 @@
 @namespace url(http://www.mozilla.org/keymaster/gatekeeper/there.is.only.xul);
 
 @-moz-document url(chrome://browser/content/browser.xul){
-
+	
 	.tabbrowser-arrowscrollbox > .arrowscrollbox-scrollbox {
 	  -moz-padding-end: 22px !important;
 	  -moz-padding-start: 0px !important;
 	}
 	
 	.tabbrowser-tab[selected="true"]:not(:-moz-lwtheme){
-	  background-image: linear-gradient(to top,#eaeaea,#e2e2e2,#ededed,#fcfcfc);
+	  background-image: linear-gradient(to bottom,#d3d3d3,#d3d3d3,#cdcdcd);
 	}
 	
 	.tabbrowser-tab:not([selected="true"]):not(:hover):not(:-moz-lwtheme) {
-	  background-image: linear-gradient(to top, #676f76 0px, transparent 1px),linear-gradient(to top, #a1a1a1,#c0c0c0,#cccccc,#d4d4d4);
-	  color:black !important;
+	  background-image: linear-gradient(transparent,transparent) !important;
 	}
 	
 	.tabbrowser-tab:not([selected="true"]):hover:not(:-moz-lwtheme) {
-	  background-image: linear-gradient(to top, #676f76 0px, transparent 1px),linear-gradient(to top,#b3b3b3,#cfcfcf,#dedede,#e5e5e5);
-	  color:black !important;
+	  background-image: linear-gradient(transparent,transparent) !important;
 	}
-	
+
 	.tabs-newtab-button:not(:-moz-lwtheme) {
-	  background-image: linear-gradient(to top, #676f76 0px, transparent 1px),linear-gradient(to top, #a1a1a1,#c0c0c0,#cccccc,#d4d4d4) !important;
+	  background-image: linear-gradient(transparent,transparent) !important;
 	}
 	
 	.tabs-newtab-button:hover:not(:-moz-lwtheme) {
-	  background-image: linear-gradient(to top, #676f76 0px, transparent 1px),linear-gradient(to top,#b3b3b3,#cfcfcf,#dedede,#e5e5e5) !important;
+	  background-image: linear-gradient(transparent,transparent) !important;
 	}
 
 	.tabbrowser-tab[pinned][titlechanged]:not([selected="true"]):not(:hover):not(:-moz-lwtheme){
 	  background-size: 95% 100% !important;
-	  background-image: linear-gradient(to top, #676f76 0px, transparent 1px),linear-gradient(to top, #a1a1a1,#c0c0c0,#cccccc,#d4d4d4) !important;
+	  background-image: linear-gradient(to bottom, #676f76 0px, transparent 1px),linear-gradient(to bottom, #a1a1a1,#c0c0c0,#cccccc,#d4d4d4) !important;
 	}
 
 	.tabbrowser-tabs{
 	  border-bottom:0 !important;
-	  margin-right: -8px !important;
 	}
 	
 	.tabbrowser-tab,
 	.tabs-newtab-button{
 	  height:28px !important;
 	}
-
+	
 	.tabs-newtab-button > .toolbarbutton-icon{
 	  margin-left:-10px !important;
 	  margin-right:-10px !important;
@@ -80,11 +77,10 @@
 	  width: 28px !important;
 	}
 	
-	.tabs-newtab-button .tab-stack,
 	.tabbrowser-tab .tab-stack {
 	  -moz-appearance: none !important;
-	  margin-top: 0px !important;
-	  margin-bottom: -2px !important;
+	  margin-top: -0px !important;
+	  margin-bottom: -1px !important;
 	}
 	
 	.tabbrowser-tab .tab-content{
@@ -100,52 +96,68 @@
 
 	#TabsToolbar {
 	  min-height: 0px !important;
-	  padding-left: 2px !important;
-	  padding-right: 2px !important;
 	}
 
-	.tabs-newtab-button{
-	  background: linear-gradient(to top, rgba(10%,10%,10%,.4) 1px, transparent 1px), linear-gradient(transparent, hsla(0,0%,45%,.1) 1px, hsla(0,0%,32%,.2) 80%, hsla(0,0%,0%,.2)),
-				  linear-gradient(-moz-dialog, -moz-dialog) !important;
-	}
-
-	.tabbrowser-tab,
-	.tabs-newtab-button{
+	.tabbrowser-tab[selected="true"]{
 	  -moz-appearance: none !important;
-	  background: linear-gradient(to top, rgba(10%,10%,10%,.4) 1px, transparent 1px), linear-gradient(transparent, hsla(0,0%,45%,.1) 1px, hsla(0,0%,32%,.2) 80%, hsla(0,0%,0%,.2)),
+	  background: linear-gradient(to bottom, rgba(10%,10%,10%,.4) 1px, transparent 1px), linear-gradient(transparent, hsla(0,0%,45%,.1) 1px, hsla(0,0%,32%,.2) 80%, hsla(0,0%,0%,.2)),
 				  linear-gradient(-moz-dialog, -moz-dialog);
 	  background-origin: border-box !important;
-	  background-position: 1px 3px !important;
-	  background-size: calc(100% - 2px) calc(100% - 2px) !important;
+	  background-position: 1px 2px !important;
+	  background-size: calc(100% - 2px) calc(100% - 3px) !important;
 	  background-repeat: no-repeat !important;
-	  border-top-right-radius: 3px !important;
-	  border-top-left-radius: 3px !important;
+	  border-bottom-left-radius: 9px !important;
+	  border-bottom-right-radius: 9px !important;
 	}
 	
-	.tabs-newtab-button:not(:-moz-lwtheme){
-	  border-width: 1px 3px 1px !important;
-	  border-image: url(chrome://classic_theme_restorer/content/images/tab.png) 0 3 1 fill repeat stretch !important;
-	  border-style: solid !important;
+	.tabbrowser-tab:not([selected="true"]):hover,
+	.tabs-newtab-button:hover{
+	  -moz-appearance: none !important;
+	  background-origin: border-box !important;
+	  background-position: 1px 2px !important;
+	  background-size: calc(100% - 2px) calc(100% - 3px) !important;
+	  background-repeat: no-repeat !important;
+	  border-bottom-left-radius: 9px !important;
+	  border-bottom-right-radius: 9px !important;
 	}
 	
-	.tabs-newtab-button:-moz-lwtheme{
-	  border-width: 1px 3px 1px !important;
-	  border-image: url(chrome://classic_theme_restorer/content/images/taba.png) 0 3 1 fill repeat stretch !important;
+	.tabbrowser-tab:not([selected="true"]):not(:hover),
+	.tabs-newtab-button{
+	  -moz-appearance: none !important;
+	  background-origin: border-box !important;
+	  background-position: 1px 2px !important;
+	  background-size: calc(100% - 2px) calc(100% - 3px) !important;
+	  background-repeat: no-repeat !important;
+	  border-bottom-left-radius: 9px !important;
+	  border-bottom-right-radius: 9px !important;
+	}
+	
+	.tabbrowser-tab[selected="true"] > .tab-stack > .tab-content {
+      border-image: url("chrome://classic_theme_restorer/content/images/tab-r.png") 1 3 0 fill repeat stretch !important;
+      border-style: solid !important;
+    }
+	.tabbrowser-tab:not([selected="true"]):hover > .tab-stack > .tab-content {
+      border-image: url("chrome://classic_theme_restorer/content/images/tab-r.png") 1 3 0 fill repeat stretch !important;
+      border-style: solid !important;
+    }
+	.tabbrowser-tab:not([selected="true"]):not(:hover) > .tab-stack > .tab-content {
+      border-image: url("chrome://classic_theme_restorer/content/images/tab_empty.png") 1 3 0 fill repeat stretch !important;
+      border-style: solid !important;
+    }
+
+	.tabs-newtab-button{
+	  border-width: 1px 3px 3px !important;
 	  border-style: solid !important;
+	  border-image: url(chrome://classic_theme_restorer/content/images/tab_empty.png) 0 3 1 fill repeat stretch !important;	
+	}
+	.tabs-newtab-button:hover{
+	  border-width: 1px 3px 3px !important;
+	  border-style: solid !important;
+	  border-image: url(chrome://classic_theme_restorer/content/images/tab-r.png) 0 3 1 fill repeat stretch !important;	
 	}
 
-	.tabbrowser-tab[selected=true] > .tab-stack > .tab-content {
-      border-image: url("chrome://classic_theme_restorer/content/images/taba.png") 1 3 0 fill repeat stretch !important;
-      border-style: solid !important;
-    }
-	
-	.tabbrowser-tab:not([selected=true]):not(:-moz-lwtheme) > .tab-stack > .tab-content {
-      border-image: url("chrome://classic_theme_restorer/content/images/tab.png") 1 3 0 fill repeat stretch !important;
-      border-style: solid !important;
-    }
-	
-	.tabbrowser-tab:not([selected=true]):-moz-lwtheme > .tab-stack > .tab-content {
-      border-image: url("chrome://classic_theme_restorer/content/images/taba.png") 1 3 0 fill repeat stretch !important;
+	.tabbrowser-tab:not([selected="true"]):hover:-moz-lwtheme > .tab-stack > .tab-content  {
+      border-image: url("chrome://classic_theme_restorer/content/images/tab-r.png") 1 3 0 fill repeat stretch !important;
       border-style: solid !important;
     }
 
@@ -161,35 +173,9 @@
 	  color: inherit !important;
 	}
 
-	.tabbrowser-tab[selected="true"]:-moz-lwtheme {
-	  background-image: linear-gradient(rgba(255,255,255,.7), rgba(255,255,255,.5) 50%) !important;
-	  background-size: calc(100% - 1px) calc(100% - 4px) !important;
-	}
-
-	@media all and (-moz-windows-glass) {
-		.tabbrowser-tab[selected="true"]:-moz-lwtheme {
-		  background-size: calc(100% - 1px) calc(100% - 5px) !important;
-		}
-	}
-
-	.tabbrowser-tab:-moz-lwtheme-brighttext:not([selected="true"]),
-	.tabs-newtab-button:-moz-lwtheme-brighttext {
-	  background-image: linear-gradient(hsla(0,0%,40%,.6), hsla(0,0%,30%,.6) 80%) !important;
-	}
-
-	.tabbrowser-tab:-moz-lwtheme-brighttext:not([selected="true"]):hover,
-	.tabs-newtab-button:-moz-lwtheme-brighttext:hover {
-	  background-image: linear-gradient(hsla(0,0%,60%,.6), hsla(0,0%,45%,.6) 80%) !important;
-	}
-
-	.tabbrowser-tab:-moz-lwtheme-darktext:not([selected="true"]),
-	.tabs-newtab-button:-moz-lwtheme-darktext {
-	  background-image: linear-gradient(hsla(0,0%,60%,.5), hsla(0,0%,45%,.5) 80%) !important;
-	}
-
-	.tabbrowser-tab:-moz-lwtheme-darktext:not([selected="true"]):hover,
-	.tabs-newtab-button:-moz-lwtheme-darktext:hover {
-	  background-image: linear-gradient(hsla(0,0%,80%,.5), hsla(0,0%,60%,.5) 80%) !important;
+	.tabs-newtab-button:-moz-lwtheme,
+	.tabbrowser-tab:not([selected="true"]):-moz-lwtheme {
+		background:none !important;
 	}
 
 	.tabbrowser-tab[pinned][titlechanged]:not([selected="true"]) {
@@ -199,16 +185,7 @@
 	  background-image: linear-gradient(hsla(0,0%,100%,.4), hsla(0,0%,75%,.4) 80%),
 						radial-gradient(circle farthest-corner at 50% 3px, rgba(255,255,255,1) 3%, rgba(186,221,251,.75) 40%, rgba(127,179,255,.5) 80%, rgba(127,179,255,.25)) !important;
 	}
-
-	.tab-background-middle[selected=true]:-moz-lwtheme{
-	  background: linear-gradient(to top, rgba(10%,10%,10%,.2) 0px, transparent 0px), linear-gradient(transparent, hsla(0,0%,45%,.0) 1px, hsla(0,0%,32%,.0) 80%, hsla(0,0%,0%,.0)) !important;
-	}
-
-	#navigator-toolbox toolbar:-moz-lwtheme{
-	  box-shadow:none !important;
-	  border: 0px solid transparent !important;
-	}
-
+	
 	.tabbrowser-tab[pinned]{
 	  min-width: 32px !important;
 	  width: 32px !important;
@@ -224,6 +201,24 @@
 	#tabbrowser-tabs:not([overflow]) > .tabbrowser-tab[last-visible-tab]:not([selected]):not([beforehovered]):not(:hover)::after {
 		background-image: none !important;
 	}
+	
+	.tabbrowser-tabs{
+	  margin-top: -2px !important;
+	  margin-right: -8px !important;
+	}
+
+	#TabsToolbar:not(:-moz-lwtheme){
+		background: linear-gradient(to bottom,#5e5e5e 1px,#898989,#939393,#989898,#a1a1a1 1px) !important;
+		border-bottom: 1px solid #6f6f6f !important;
+	}
+	
+	#TabsToolbar #ctr_appbutton{
+	  border-radius: 0 !important;
+	  border-bottom-left-radius: 3px !important;
+	  border-bottom-right-radius: 3px !important;
+	  margin-top: 0 !important;
+	  border-top: 0 !important;
+	}
 
 	.tabbrowser-tab:not([pinned]) .tab-close-button{
 	  margin-right:-4px !important;
@@ -234,9 +229,8 @@
 	  margin-right:3px !important;
 	}
 }
-
 @-moz-document url(chrome://classic_theme_restorer/content/options.xul) {
 	#ctr_sqtabcolorstab{
-		visibility: visible !important;
+		visibility: collapse !important;
 	}
 }
