--- a/xpi/content/css/appbuttxt.css
+++ b/xpi/content/css/appbuttxt.css
@@ -1,3 +1,4 @@
+@import url(chrome://ctr_os_special/skin/appbuttxtextra.css);
 @namespace url(http://www.mozilla.org/keymaster/gatekeeper/there.is.only.xul);
 
 @-moz-document url(chrome://browser/content/browser.xul) {
