--- a/xpi/ctr_os_special/mac/nav_txtonlyextra.css
+++ b/xpi/ctr_os_special/mac/nav_txtonlyextra.css
@@ -13,5 +13,9 @@
 	#navigator-toolbox .toolbarbutton-1:not(.tabs-newtab-button):not(.tab-close-button) .toolbarbutton-text {
 	  padding: 4px !important;
 	}
+	
+	#ctr_addon-bar #zoom-reset-button label{
+	  margin-top:-6px !important;
+	}
 
 }
