--- a/xpi/ctr_os_special/winaero/mode_icons_and_text_extra.css
+++ b/xpi/ctr_os_special/winaero/mode_icons_and_text_extra.css
@@ -39,10 +39,14 @@
 	}
 
 	#nav-bar .toolbarbutton-1 {
-	  margin:1px !important;
+	  margin: 1px 0 !important;
 	}
 	#navigator-toolbox #nav-bar #urlbar-container{
 	  margin-left: 4px !important;
+	}
+	
+	#ctr_addon-bar toolbarbutton .toolbarbutton-icon {
+	  max-height: 34px !important;
 	}
 
 }
