--- a/xpi/ctr_os_special/winaero/overlayextra.css
+++ b/xpi/ctr_os_special/winaero/overlayextra.css
@@ -151,7 +151,11 @@
 	#ctr_addon-bar .toolbarbutton-menubutton-dropmarker {
 	  padding: 0px !important;
 	  margin-left: -3px !important;
-	}
+	}/*
+	#ctr_addon-bar{
+		padding: 0 !important;
+		margin-bottom: -1px !important;
+	}*/
 
 }
 
