--- a/xpi/content/css/back-forward.css
+++ b/xpi/content/css/back-forward.css
@@ -30,5 +30,9 @@
     #urlbar[focused="true"]{
       border-left:1px solid #72c0fe !important;
     }
-
+	
+	#nav-bar #urlbar-container #forward-button[disabled]{
+		visibility:collapse !important;
+		opacity: 1.0 !important;
+	}
 }
