--- a/xpi/ctr_os_special/mac/overlayextra.css
+++ b/xpi/ctr_os_special/mac/overlayextra.css
@@ -72,7 +72,7 @@
 	  border:1px solid #727475 !important;
 	  border-color: hsla(214,89%,21%,.5) !important;
 	  border-radius: 2.5px 2.5px 0 0 !important;
-	  margin-top:1px !important;
+	  margin-top:2px !important;
 	}
 
 	#ctr_appbuttonPopup menu,
@@ -101,7 +101,7 @@
 	  background:linear-gradient(to bottom,#d2d2d2,#d9d9d9,#e9e9e9);
 	}
 	
-	#ctr_addon-bar toolbarbutton {
+	/*#ctr_addon-bar toolbarbutton {
 	  -moz-appearance: none !important;
 	  margin: 0px 3px !important;
 	  padding:0px !important;
@@ -114,7 +114,7 @@
 	  padding: 0px !important;
 	  margin-left: 1px !important;
 	  margin-right: 1px !important;
-	}
+	}*/
 
 }
 
