--- a/xpi/content/overlay.css
+++ b/xpi/content/overlay.css
@@ -194,6 +194,7 @@
 	#ctr_appbuttonPopup #newwebDeveloperPopupMenu label,
 	#ctr_appbuttonPopup #menu_newBookmarksmenu label,
 	#ctr_appbuttonPopup #menu_newHistorymenu label,
+	#ctr_appbuttonPopup #menu_newHistorymenu2 label,
 	#ctr_appbuttonPopup #menu_newPreferencesmenu label,
 	#ctr_appbuttonPopup #newhelpMenu label{
 		visibility:collapse;
@@ -206,6 +207,7 @@
 	#ctr_appbuttonPopup #newwebDeveloperPopupMenu #newmenuWebDeveloperPopup label,
 	#ctr_appbuttonPopup #menu_newBookmarksmenu #newbookmarksMenuPopup label,
 	#ctr_appbuttonPopup #menu_newHistorymenu #newHistorymenuPopup label,
+	#ctr_appbuttonPopup #menu_newHistorymenu2 #newHistorymenuPopup label,
 	#ctr_appbuttonPopup #menu_newPreferencesmenu #menu_newPreferencesmenuPopup label,
 	#ctr_appbuttonPopup #newhelpMenu #menu_newHelpPopup label{
 		visibility:visible;
