--- a/xpi/content/css/tabs_squared-osx.css
+++ b/xpi/content/css/tabs_squared-osx.css
@@ -161,15 +161,10 @@
 	  color: inherit !important;
 	}
 
-	.tabbrowser-tab[selected="true"]:-moz-lwtheme {
+	.tabbrowser-tab[selected="true"]:-moz-lwtheme,
+	.tabbrowser-tab[pinned]:-moz-lwtheme {
 	  background-image: linear-gradient(rgba(255,255,255,.7), rgba(255,255,255,.5) 50%) !important;
 	  background-size: calc(100% - 1px) calc(100% - 4px) !important;
-	}
-
-	@media all and (-moz-windows-glass) {
-		.tabbrowser-tab[selected="true"]:-moz-lwtheme {
-		  background-size: calc(100% - 1px) calc(100% - 5px) !important;
-		}
 	}
 
 	.tabbrowser-tab:-moz-lwtheme-brighttext:not([selected="true"]),
@@ -213,10 +208,14 @@
 	  min-width: 32px !important;
 	  width: 32px !important;
 	  max-width: 32px !important;
+	  background-position: 0px 2px !important;
+	  background-size: calc(100% - 0px) calc(100% - 1px) !important;
+	  border-top-right-radius: 9px !important;
+	  border-top-left-radius: 9px !important;
 	}
 
 	.tabbrowser-tab[pinned] image{
-	  margin-left:2px !important;
+	  margin-left:0px !important;
 	}
 
 	#tabbrowser-tabs[movingtab] > .tabbrowser-tab[beforeselected]:not([last-visible-tab])::after,
@@ -237,6 +236,6 @@
 
 @-moz-document url(chrome://classic_theme_restorer/content/options.xul) {
 	#ctr_sqtabcolorstab{
-		visibility: visible !important;
+	  visibility: visible !important;
 	}
 }
