--- a/xpi/content/css/tabs_squared-osx2.css
+++ b/xpi/content/css/tabs_squared-osx2.css
@@ -186,15 +186,10 @@
 	  color: inherit !important;
 	}
 
-	.tabbrowser-tab[selected="true"]:-moz-lwtheme {
+	.tabbrowser-tab[selected="true"]:-moz-lwtheme,
+	.tabbrowser-tab[pinned]:-moz-lwtheme {
 	  background-image: linear-gradient(rgba(255,255,255,.7), rgba(255,255,255,.5) 50%) !important;
 	  background-size: calc(100% - 1px) calc(100% - 4px) !important;
-	}
-
-	@media all and (-moz-windows-glass) {
-		.tabbrowser-tab[selected="true"]:-moz-lwtheme {
-		  background-size: calc(100% - 1px) calc(100% - 4px) !important;
-		}
 	}
 
 	.tabs-newtab-button:-moz-lwtheme,
@@ -223,10 +218,12 @@
 	  min-width: 32px !important;
 	  width: 32px !important;
 	  max-width: 32px !important;
+	  background-position: 0px 2px !important;
+	  background-size: calc(100% - 0px) calc(100% - 1px) !important;
 	}
 
 	.tabbrowser-tab[pinned] image{
-	  margin-left:2px !important;
+	  margin-left:0px !important;
 	}
 
 	#tabbrowser-tabs[movingtab] > .tabbrowser-tab[beforeselected]:not([last-visible-tab])::after,
@@ -247,6 +244,12 @@
 
 @-moz-document url(chrome://classic_theme_restorer/content/options.xul) {
 	#ctr_sqtabcolorstab{
-		visibility: collapse !important;
+	  visibility: visible !important;
+	}
+	#tabcolorbox,
+	#tabhovcolorbox,
+	#ntabcolorbox,
+	#ntabhovcolorbox{
+	  visibility: collapse !important;
 	}
 }
