--- a/xpi/content/css/tabs_squared-r-osx.css
+++ b/xpi/content/css/tabs_squared-r-osx.css
@@ -156,7 +156,8 @@
 	  color: inherit !important;
 	}
 
-	.tabbrowser-tab[selected="true"]:-moz-lwtheme {
+	.tabbrowser-tab[selected="true"]:-moz-lwtheme,
+	.tabbrowser-tab[pinned]:-moz-lwtheme {
 	  background-image: linear-gradient(rgba(255,255,255,.7), rgba(255,255,255,.5) 50%) !important;
 	  background-size: calc(100% - 1px) calc(100% - 4px) !important;
 	}
@@ -193,10 +194,14 @@
 	  min-width: 32px !important;
 	  width: 32px !important;
 	  max-width: 32px !important;
+	  background-position: 0px 2px !important;
+	  background-size: calc(100% - 0px) calc(100% - 1px) !important;
+	  border-top-right-radius: 0px !important;
+	  border-top-left-radius: 0px !important;
 	}
 
 	.tabbrowser-tab[pinned] image{
-	  margin-left:2px !important;
+	  margin-left:0px !important;
 	}
 
 	#tabbrowser-tabs[movingtab] > .tabbrowser-tab[beforeselected]:not([last-visible-tab])::after,
@@ -232,8 +237,9 @@
 	  margin-right:3px !important;
 	}
 }
+
 @-moz-document url(chrome://classic_theme_restorer/content/options.xul) {
 	#ctr_sqtabcolorstab{
-		visibility: visible !important;
+	  visibility: visible !important;
 	}
 }
