--- a/xpi/ctr_os_special/winaero/smallnavbutextra.css
+++ b/xpi/ctr_os_special/winaero/smallnavbutextra.css
@@ -374,4 +374,20 @@
 		visibility:visible !important;
 		opacity: 1.0 !important;
 	}
+	
+	/* star button in urlbar support  */
+	#navigator-toolbox #nav-bar #urlbar-container #bookmarks-menu-button > .toolbarbutton-menubutton-button {
+		-moz-appearance: none !important;
+		padding: 0px 0px !important;
+		background: none !important;
+		border: 0px solid !important;
+		margin: -8px 0 !important;
+		box-shadow: none !important;
+	}
+
+	#navigator-toolbox #nav-bar #urlbar-container  #bookmarks-menu-button > .toolbarbutton-menubutton-button:not(.tabs-newtab-button):not(.tab-close-button):not([disabled]):hover > .toolbarbutton-icon {
+      background-image: linear-gradient(hsla(0,0%,100%,.0), hsla(0,0%,100%,.0)) !important;
+      border-color: hsla(210,54%,20%,.0) hsla(210,54%,20%,.0) hsla(210,54%,20%,.0) !important;
+      box-shadow: none !important;
+	}
 }
