--- a/xpi/ctr_os_special/linux/overlayextra.css
+++ b/xpi/ctr_os_special/linux/overlayextra.css
@@ -78,6 +78,7 @@
 	  visibility: visible !important;
 	}
 	#ctr_tabs_in_titlebar,
+	.ctr_winmaconly,
 	#ctr_appbutton_list1{
 	  visibility: collapse !important;
 	}
