--- a/xpi/content/css/combrelstop.css
+++ b/xpi/content/css/combrelstop.css
@@ -1,26 +1,14 @@
-@-moz-document url(chrome://browser/content/browser.xul),
-			   url(chrome://global/content/customizeToolbar.xul) {
+@-moz-document url(chrome://browser/content/browser.xul){
 	
-	/* hide stop/reload button on urlbar*/
-	#urlbar-container #urlbar-reload-button,
-	#urlbar-container #urlbar-stop-button{
-	  visibility: collapse !important;
-	}
-	
-	#ctr_comb_stopreload-button{
-	  visibility: visible !important;
-	}
-	
-	#customization-palette #ctr_comb_stopreload-button #urlbar-reload-button image,
-	#customization-palette #ctr_comb_stopreload-button #urlbar-stop-button image,
-	#customization-palette #urlbar-reload-button image,
-	#customization-palette #urlbar-stop-button image{
-		background:none !important;
-		list-style-image:none !important;
-	}
-	
-	#customization-palette #ctr_comb_stopreload-button{
-	  background:url("chrome://classic_theme_restorer/content/images/reloadstop.png") center no-repeat !important;
+	/* This simulates a combined stop reload button,
+	** if reload button is placed after stop button.
+	**
+	** Hide disabled stop button and hide reload button,
+	** if stop button is not disabled.
+	**/
+	toolbar[currentset*="ctr_stop-button,ctr_reload-button"]:not([customizing]) #ctr_stop-button[disabled],
+	toolbar[currentset*="ctr_stop-button,ctr_reload-button"]:not([customizing]) #ctr_stop-button:not([disabled]) ~ #ctr_reload-button{
+	  visibility:collapse !important;
 	}
 
 }
