--- a/xpi/content/css/tabs_squared-r-osx2.css
+++ b/xpi/content/css/tabs_squared-r-osx2.css
@@ -234,13 +234,11 @@
 }
 
 @-moz-document url(chrome://classic_theme_restorer/content/options.xul) {
-	#ctr_sqtabcolorstab{
+	#ctr_ccap_t_squared2{
 	  visibility: visible !important;
 	}
-	#tabcolorbox,
-	#tabhovcolorbox,
-	#ntabcolorbox,
-	#ntabhovcolorbox{
+	
+	#ctr_ccap_t_default{
 	  visibility: collapse !important;
 	}
 }
