--- a/xpi/ctr_os_special/mac/tabsontop_offextra.css
+++ b/xpi/ctr_os_special/mac/tabsontop_offextra.css
@@ -6,8 +6,13 @@
 		background: #d2d2d2 !important;
 	}
 	#titlebar{
-		padding-bottom: 22px !important;
+		padding-top: 0px !important;
+		padding-bottom: 24px !important;
 	}
+	#main-window[inFullscreen] #navigator-toolbox {
+		margin-top:-10px !important;
+	}
+	
 	#main-window:not([tabsintitlebar])[sizemode="normal"]  #TabsToolbar,
 	#main-window[tabsintitlebar][sizemode="normal"]  #TabsToolbar{
 		margin-left: 0px !important;
